# PyBASS3

./: pyproject.toml
src/pybass3/: bass_module.py
